# SuiteSparse

./: .gitattributes  .gitignore  Build_VS.ps1  CITATION.bib  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR-LICENSE.txt  CSparse_to_CXSparse  ChangeLog  Contents.m  FIXME.txt  LICENSE.txt  Makefile  README.md  README.txt  SuiteSparse_demo.m  SuiteSparse_install.m  SuiteSparse_paths.m  SuiteSparse_test.m  TODO.txt
AMD/: CMakeLists.txt  Makefile  README.txt
AMD/Config/: AMD.pc.in  AMDConfig.cmake.in  amd.h.in  amd_version.tex.in
AMD/Demo/: Makefile  amd_demo.c  amd_demo.out  amd_demo2.c  amd_demo2.out  amd_f77cross.f  amd_f77demo.f  amd_f77simple.f  amd_f77wrapper.c  amd_l_demo.c  amd_l_demo.out  amd_simple.c
AMD/Doc/: AMD_UserGuide.bib  AMD_UserGuide.tex  ChangeLog  License  License.txt  Makefile  amd_version.tex
AMD/Include/: amd.h  amd_internal.h
AMD/Lib/: GNUmakefile  Makefile  libamd.def
AMD/MATLAB/: Contents.m  Makefile  amd.m  amd2.m  amd_demo.m  amd_demo.m.out  amd_install.m  amd_make.m  amd_mex.c  can_24
AMD/Source/: GNUmakefile  Makefile  amd.f  amd_1.c  amd_2.c  amd_aat.c  amd_control.c  amd_defaults.c  amd_dump.c  amd_info.c  amd_l1.c  amd_l2.c  amd_l_aat.c  amd_l_control.c  amd_l_defaults.c  amd_l_dump.c  amd_l_info.c  amd_l_order.c  amd_l_post_tree.c  amd_l_postorder.c  amd_l_preprocess.c  amd_l_valid.c  amd_order.c  amd_post_tree.c  amd_postorder.c  amd_preprocess.c  amd_valid.c  amd_version.c  amdbar.f
AMD/cmake_modules/: FindAMD.cmake
BTF/: CMakeLists.txt  Makefile  README.txt
BTF/Config/: BTF.pc.in  BTFConfig.cmake.in  btf.h.in
BTF/Doc/: ChangeLog  License.txt
BTF/Include/: btf.h  btf_internal.h
BTF/Lib/: Makefile
BTF/MATLAB/: Contents.m  Makefile  README  btf.c  btf.m  btf_demo.m  btf_install.m  btf_make.m  checkbtf.m  dmperm.c  dmperm.fig  dp.m  dp_mex.c  drawbtf.m  maxtrans.c  maxtrans.m  maxtrans_mex.c  strongcomp.c  strongcomp.m  td.m  toobig.m  trav.m
BTF/Source/: btf_l_maxtrans.c  btf_l_order.c  btf_l_strongcomp.c  btf_maxtrans.c  btf_order.c  btf_strongcomp.c  btf_version.c
BTF/cmake_modules/: FindBTF.cmake
CAMD/: CMakeLists.txt  Makefile  README.txt
CAMD/Config/: CAMD.pc.in  CAMDConfig.cmake.in  camd.h.in  camd_version.tex.in
CAMD/Demo/: Makefile  camd_demo.c  camd_demo.out  camd_demo2.c  camd_demo2.out  camd_l_demo.c  camd_l_demo.out  camd_simple.c  camd_simple.out
CAMD/Doc/: CAMD_UserGuide.tex  ChangeLog  License  License.txt  Makefile  camd.sed  camd_version.tex  cdiff  docdiff
CAMD/Include/: camd.h  camd_internal.h
CAMD/Lib/: GNUmakefile  Makefile  libcamd.def
CAMD/MATLAB/: Contents.m  Makefile  camd.m  camd_demo.m  camd_demo.m.out  camd_make.m  camd_mex.c
CAMD/Source/: GNUmakefile  Makefile  camd_1.c  camd_2.c  camd_aat.c  camd_control.c  camd_defaults.c  (+19 more)
CCOLAMD/: CMakeLists.txt  ChangeLog  Contents.m  Makefile  README.txt  ccolamd.m  ccolamd_demo.m  ccolamd_example.out  ccolamd_l_example.out  ccolamd_make.m  ccolamd_test.m  ccolamdmex.c  ccolamdtestmex.c  ccolamdtestmex.m  csymamd.m  csymamdmex.c  csymamdtestmex.c  csymamdtestmex.m  luflops.m
CHOLMOD/: .gitignore  CMakeLists.txt  Makefile  README.txt  TODO.txt  blas_dump.txt  demo_output.txt  diary_results.txt  do_results.m  make_demos.txt  o2  od  od2  os  os2
COLAMD/: CMakeLists.txt  ChangeLog  Contents.m  Makefile  README.txt  colamd.c  colamd.h  colamd.m  colamd2.m  colamd_demo.m  colamd_example.c  colamd_example.out  colamd_global.c  colamd_l_example.c  colamd_l_example.out  colamd_make.m  colamd_test.m  colamdmex.c  colamdtestmex.c  luflops.m  symamd.m  symamd2.m  symamdmex.c  symamdtestmex.c
CSparse/: CMakeLists.txt  ChangeLog  Makefile  README.txt
CXSparse/: CMakeLists.txt  ChangeLog  Makefile  README.txt
Example/: .gitignore  CMakeLists.txt  License.txt  Makefile  Makefile.am  README.md  configure.ac
GPUQREngine/: CMakeLists.txt  Makefile  README.txt
GraphBLAS/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.txt
KLU/: CMakeLists.txt  Makefile  README.txt  TODO.txt
LAGraph/: .gitignore  .readthedocs.yaml  Acknowledgments.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Contributors.txt  Dockerfile  LICENSE  Makefile  README.md
LDL/: CMakeLists.txt  ChangeLog  Contents.m  License  Makefile  README.txt  ldl.bib  ldl.c  ldl.h  ldl_userguide.ps  ldl_userguide.tex  ldlamd.out  ldldemo.m  ldldemo.out  ldlmain.c  ldlmain.out  ldlmain2.m  ldlmain2.out  ldlmex.c  ldlrow.m  ldlsimple.c  ldlsparse.m  ldlsymbol.m  ldlsymbolmex.c  ldltest.m  ldltest.out
Mongoose/: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  codecov.yml  codemeta.json
ParU/: 3.txt  CMakeLists.txt  Makefile  README.md  TODO.txt
RBio/: CMakeLists.txt  Contents.m  Makefile  RBcread.f  RBcread_32.f  RBcread_64.f  RBcsplit.f  RBcsplit_32.f  RBcsplit_64.f  RBfix.m  RBinstall.m  RBint.f  RBmake.m  RBraw.f  RBraw.m  RBraw_mex_32.f  RBraw_mex_64.f  RBread.f  RBread.m  RBread_32.f  RBread_64.f  RBread_mex.f  RBread_mex_32.f  RBread_mex_64.f  RBreade.m  RBrread.f  RBrread_32.f  RBrread_64.f  RBtype.f  RBtype.m  RBtype_mex_32.f  RBtype_mex_64.f  RBwrite.f  RBwrite.m  RBwrite_32.f  RBwrite_64.f  RBwrite_mex.f  RBwrite_mex_32.f  RBwrite_mex_64.f  README.txt
SLIP_LU/: CMakeLists.txt  Makefile  README.md
SPEX/: CMakeLists.txt  LICENSE.txt  Makefile  README.md  TODO.txt  old_Makefile
SPQR/: .gitignore  CMakeLists.txt  Makefile  README.txt  demo_output.txt
SuiteSparse_GPURuntime/: CMakeLists.txt  Makefile  README.txt
SuiteSparse_config/: .gitignore  CMakeLists.txt  Makefile  README.txt  SuiteSparse_config.c  SuiteSparse_config.h  SuiteSparse_config.mk  SuiteSparse_config_GPU.mk  SuiteSparse_config_GPU_debug.mk  SuiteSparse_config_GPU_gcc.mk  SuiteSparse_config_GPU_icc.mk  SuiteSparse_config_GPU_icc10.mk  SuiteSparse_config_Mac.mk  SuiteSparse_config_backslash.mk  SuiteSparse_config_linux.mk
SuiteSparse_metis/: CMakeLists.txt  Makefile  README.txt
UMFPACK/: .gitignore  CMakeLists.txt  Makefile  README.txt  TODO.txt
metis-5.1.0/: CMakeLists.txt  Makefile  README.txt
(+15932 files in other folders)
